--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -7,6 +7,13 @@ pt-BR:
         restrict_dependent_destroy:
           has_one: Não é possível excluir o registro pois existe um %{record} dependente
           has_many: Não é possível excluir o registro pois existem %{record} dependentes
+    models:
+      student:
+        one: Estudante
+        other: Estudantes
+      course:
+        one: Curso
+        other: Cursos
   date:
     abbr_day_names:
     - Dom
