--- a/config/locales/responders.pt-BR.yml
+++ b/config/locales/responders.pt-BR.yml
@@ -2,11 +2,11 @@ pt-BR:
   flash:
     actions:
       create:
-        notice: "%{resource_name} foi criado(a) com sucesso."
-        alert: '%{resource_name} não pode ser criado(a).'
+        success: "%{resource_name} foi criado(a) com sucesso."
+        error: '%{resource_name} não pode ser criado(a).'
       update:
-        notice: "%{resource_name} foi atualizado(a) com sucesso."
-        alert: '%{resource_name} não pode ser atualizado(a).'
+        success: "%{resource_name} foi atualizado(a) com sucesso."
+        error: '%{resource_name} não pode ser atualizado(a).'
       destroy:
-        notice: "%{resource_name} foi excluido(a) com sucesso."
-        alert: "%{resource_name} não pôde ser excluido(a)."
+        success: "%{resource_name} foi excluido(a) com sucesso."
+        error: "%{resource_name} não pôde ser excluido(a)."
